plugins {
    id 'java'
}

group 'com.varlamovas.jsonserializer'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'com.google.code.gson:gson:2.8.5'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
    testImplementation 'org.apache.commons:commons-lang3:3.9'
}

test {
    testLogging {
        events "passed", "skipped", "failed"

    }
    useJUnitPlatform()
}
